<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="#727272">
   <TableRow>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerJerseyNumber"
                android:text="@string/jerseySymbol"
                style="@style/HeaderText"
                android:paddingRight="8dip"
                android:layout_weight="1"
                android:gravity="right">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerName"
                android:text="@string/playerName"
                style="@style/HeaderText"
                android:layout_weight="2"
                android:gravity="left">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerTimeOnField"
                style="@style/HeaderText"
                android:layout_weight="1.2"
                android:text="@string/playerTimeOnField"
                android:gravity="center">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerGoals"
                android:text="@string/playerGoals"
                style="@style/HeaderText"
                android:layout_weight="1"
                android:gravity="right" 
                android:paddingRight="7dip">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerSOG"
                android:text="@string/playerSogs"
                style="@style/HeaderText"
                android:layout_weight="1"
                android:gravity="right">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerAssists"
                android:text="@string/playerAssists"
                style="@style/HeaderText"
                android:layout_weight="1"
                android:gravity="right">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerSaves"
                android:text="@string/playerSaves"
                style="@style/HeaderText"
                android:layout_weight="1"
                android:gravity="right">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/goalsAgainst"
                android:text="@string/goalsAgainst"
                style="@style/HeaderText"
                android:gravity="right" android:layout_weight="1.1" android:paddingRight="8dip">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/playerID"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:visibility="gone"
                android:layout_weight="0">
      </TextView>
   </TableRow>
</TableLayout>
