<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="250dip"
  android:layout_height="wrap_content"
  android:orientation="vertical">
   <Spinner 
        android:id="@+id/scoredBy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/scoredBy"
        android:padding="10dip"
   />
   <Spinner 
        android:id="@+id/assistedBy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/assistedBy"
   />
   <LinearLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="right">
      <Button android:id="@+id/ok"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/ok"
              android:textSize="20sp"
              android:gravity="center"
              android:layout_weight="1"/>
      <Button android:id="@+id/cancel"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/cancel"
              android:textSize="20sp"
              android:gravity="center"
              android:layout_weight="1"/>
   </LinearLayout>
</LinearLayout>
