<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dip"
              android:layout_height="wrap_content"
              android:orientation="vertical">
   <EditText android:hint="@string/jerseyNumber"
             android:id="@+id/editJerseyNumber" 
             android:layout_width="290dip" 
             android:paddingLeft="5dip"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:inputType="number"/>
   <EditText android:hint="@string/playerName" 
             android:id="@+id/editPlayerName" 
             android:layout_width="290dip" 
             android:paddingLeft="5dip"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:inputType="textCapWords"/>
   <EditText android:id="@+id/editPlayerId" 
             android:layout_width="0dip"
             android:layout_height="fill_parent"
             android:visibility="gone"/>
   <LinearLayout android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:paddingRight="4dip">
      <Button android:id="@+id/ok"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/ok"
              android:gravity="center"
              android:layout_weight="1"/>
      <Button android:id="@+id/addNewOrDelete"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/saveAndNew"
              android:gravity="center"
              android:layout_weight="1"/>
      <Button android:id="@+id/cancel"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/cancel"
              android:gravity="center"
              android:layout_weight="1"/>
   </LinearLayout>
</LinearLayout>
