<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="35dp"
              android:background="#727272">
   <TableRow android:layout_width="fill_parent">
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/date"
                style="@style/HeaderText"
                android:layout_weight="1.3"
                android:paddingRight="10dp"
                android:paddingLeft="0dp"
                android:paddingTop="5dp"
                android:gravity="center" 
                android:id="@+id/gameDate">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/HeaderText"
                android:layout_weight="1.5"
                android:paddingLeft="10dp"
                android:text="@string/against"
                android:gravity="left" 
                android:paddingTop="5dp"
                android:id="@+id/opponent">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/score"
                style="@style/HeaderText"
                android:layout_weight="1.1"
                android:paddingLeft="10dp"
                android:gravity="center" 
                android:paddingTop="5dp"
                android:id="@+id/score">
      </TextView>
      <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/SOG"
                style="@style/HeaderText"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:gravity="center" 
                android:paddingTop="5dp"
                android:id="@+id/shots_on_goal">
      </TextView>
   </TableRow>
</TableLayout>
